<resources>
    <string name="app_name">EtecAPFQProApp</string>
    <string name="btnIniciar">INICIAR</string>
    <string name="imageIniciar">logoEtec</string>
    <string name="TextViewDesenvolvedores">Desenvolvedores</string>
    <string name="TextViewNapoleao">Napoleão Kazu Onaya</string>
    <string name="TextViewVeronica">Veronica Casanova</string>
    <string name="TextViewOrientadores">Orientadores</string>
    <string name="TextViewLeandro">Leandro Érico Batista</string>
    <string name="TextViewMarcos">Marcos Sergent</string>
    <string name="ButtonIntegrantes">AVANÇAR</string>
    <string name="TextView2018">2018</string>
    <string name="TextViewSaoPaulo">São Paulo</string>
    <string name="imageQuimica">logoQuimica</string>
    <string name="ButtonLogin">CADASTRAR</string>
    <string name="NameUser">Digite seu nome</string>
    <string name="phoneDDI">+55</string>
    <string name="phoneDDD">11</string>
    <string name="phoneTelefone">99999-9999</string>
    <string name="hintNome">Digite seu nome</string>
    <string name="hintDDI">+55</string>
    <string name="hintDDD">11</string>
    <string name="hintPhone">99999-9999</string>
    <string name="imageNotas">natasQuimica</string>
    <string name="imageFormulas">formulasQuimicas</string>
    <string name="imageRendimento">rendimentoQuimico</string>
    <string name="imageExcesso">excessoQuimico</string>
    <string name="imageLimitante">limitanteQuimico</string>
    <string name="imageInformacao">informacaoQuimica</string>
    <string name="imageInformacaoTela">imageInformacaoAtivo</string>
    <string name="TextViewBibliografia">Bibliografia</string>
    <string name="textViewInfoBibliografia">
    <p><b>Todos direitos de imagem reservados aos sites:</b></p>"\n\n"
    <p><b>https://www.flaticon.com/</b></p>"\n"
    <p><b>https://freepik.com</b></p>"\n\n"
    <p><b>https://mundoeducacao.bol.uol.com.br/quimica/indicadores-acido-base.htm</b></p>
    <p><b>Bibliografia utilizada:</b></p>"\n\n"
    <p>ATKINS, Peter. Princípios da Química: Questionando a Vida Moderna e o Meio Ambiente. Ed. Bookman.</p>"\n\n"
    <p>TITO, Canto. Química na Abordagem do Cotidiano. Volume 2 Físico Química. Ed. Moderna, 4º Edição.</p>"\n\n"
    <p>FELTRE, Ricardo. Química: Físico Química. Ed. Moderna, 7º Edição.</p>"\n\n"
    <p>SKOOG, West, Holler, Crouch. Fundamentos de Química Analítica. Ed. Pioneira, 8º Edição, 2005.</p>"\n\n"
    <p><b>Site referência de ensino:</b></p>"\n\n"
    <p><b>http://www.etectiquatira.com.br</b></p>"\n\n"
    <p><b>Estude na ETEC Tiquatira saiba mais em:</b></p>"\n\n"
    <p><b>http://www.vestibulinhoetec.com.br</b></p>
    </string>
    <string name="buttonSaibaMais">SAIBA MAIS</string>
    <string name="TextViewFormulas">Fórmulas</string>
    <string name="imageTelaFormula">imageTelaFormulaLogo</string>
    <string name="TextViewFormulaTelas">
    <p><b>Fórmulas</b></p>"\n\n"
    <p><b>Constantes:</b></p>"\n\n"
    <p><b>Constante de Avogrado:</b>6,02x10<sup>23</sup>partículas,que podem ser"\("átomos,moléculas,íons,elétrons,prótons,etc"\)".</p>"\n\n"
    <p><b>Volume molar em condições ideais com temperatura e pressão constantes CNTP"\("0<sup>º</sup>C e 1 atm"\)",o volume será sempre 22,4L</b></p>"\n\n"
    <p><b>Número de mols:</b></p>"\n\n"
    <p><b>n = m / MM</b></p>"\n\n"
    <p><b>n</b> número de mols é dado em <b>mols</b></p>"\n"
    <p><b>m</b> massa é dada em gramas <b>g</b>.</p>"\n"
    <p><b>MM</b> massa molar é dada em <b>g/mols</b>.</p>"\n\n"
    <p><b>Densidade:</b></p>"\n\n"
    <p><b>d = m / V</b></p>"\n\n"
    <p><b>d</b> densidade <b>g/cm<sup>3</sup></b></p>"\n"
    <p><b>m</b> massa é dada em gramas <b>g</b>.</p>"\n"
    <p><b>V</b> volume é dado em <b>cm<sup>3</sup></b>.</p>"\n\n"
    <p><b>Tabela de conversão de unidade volumétrica:</b></p>"\n\n"
    <p><b>1L</b> = <b>1000cm<sup>3</sup></b></p>"\n"
    <p><b>1cm<sup>3</sup></b> = <b>0,001L</b></p>"\n"
    <p><b>1dm<sup>3</sup></b> = <b>1L</b></p>"\n"
    <p><b>1L</b> = <b>1dm<sup>3</sup></b></p>"\n\n"
    <p><b>Concentração simples:</b></p>"\n\n"
    <p><b>C = m / V</b></p>"\n\n"
    <p><b>C</b> concentração simples é dada em <b>g/L.</b></p>"\n"
    <p><b>m</b> massa é dada em gramas <b>g</b>.</p>"\n"
    <p><b>V</b> volume é dado em litros <b>L</b>.</p>"\n\n"
    <p><b>Concentração molar:</b></p>"\n\n"
    <p><b>M = m / "\("MM.V"\)"</b></p>"\n\n"
    <p><b>C</b> concentração molar é dada em <b>mols/L.</b></p>"\n"
    <p><b>m</b> massa é dada em gramas <b>g</b>.</p>"\n"
    <p><b>MM</b> massa molar é dada e mols <b>g/mols</b>.</p>"\n"
    <p><b>V</b> volume é dado em litros <b>L</b>.</p>"\n\n"
    <p><b>Normalidade:</b></p>"\n\n"
    <p><b>N = n<sub>eqg</sub> / V</b></p>"\n\n"
    <p><b>N</b> normalidade é dada em <b>N</b></p>"\n"
    <p><b>n<sub>eqg</sub></b> equivalente em gramas é dada em <b>g</b>.</p>"\n"
    <p><b>V</b> volume é dado em litros <b>L</b>.</p>"\n\n"
    </string>
    <string name="TextViewRendimento">Rendimento</string>
    <string name="imageRendimentoLogo">imageRendimentoLogo</string>
    <string name="TextViewRendimentoTeoria">
    <p><b>Rendimento</b></p>"\n\n"
    <p><b>Regras para o calculo do redimento:</b></p>"\n\n"
    <p><b>1º Identificação do composto problema.</b></p>"\n\n"
    <p><b>2º Montar a equação química.</b></p>"\n\n"
    <p><b>3º Balancear a equação.</b></p>"\n\n"
    <p><b>4º Identificação dos índices estequiométricos.</b></p>"\n\n"
    <p><b>5º Calcular a massa molar multiplicando pelo índice.</b></p>"\n\n"
    <p><b>6º Calcular a massa real.</b></p>"\n\n"
    <p><b>7º Calcular a porcentagem de rendimento.</b></p>"\n\n"
    <p>Exemplo:</p>"\n\n"
    <p>Dados: Na combustão de 30g de Carbono, têm-se um rendimento de 90%</p>"\n\n"
    <p>Identificação do problema</p>"\n\n"
    <p>Qual o rendimento para combustão de 30g de Carbono, massa real de Carbono = ? já que fora dado a porcentagem de rendimento de 90%</p>"\n\n"
    <p><b>C<sub>"\("s"\)"</sub> + O<sub>2</sub><sub>"\("g"\)"</sub></b> &#x2192; <b>CO<sub>2</sub><sub>"\("g"\)"</sub></b></p>"\n\n"
    <p>Balanceamento:</p>"\n\n"
    <p><b>1C<sub>"\("s"\)"</sub> + 1O<sub>2</sub><sub>"\("g"\)"</sub></b> &#x2192; <b>1CO<sub>2</sub><sub>"\("g"\)"</sub></b></p>"\n\n"
    <p>Índice:</p>"\n\n"
    <p><b>1</b>C<sub>"\("s"\)"</sub></p>"\n"
    <p><b>1</b>O<sub>2</sub><sub>"\("g"\)"</sub></p>"\n"
    <p><b>1</b>CO<sub>2</sub><sub>"\("g"\)"</sub></p>"\n\n"
    <p>Cálculo de Massa Molar com índice:</p>"\n\n"
    <p>1C<sub>"\("s"\)"</sub>= 1"\("1*12"\)" = 12 g/mol</p>"\n"
    <p>1O<sub>2</sub><sub>"\("g"\)"</sub> = 1"\("2*16"\)" = 32 g/mol</p>"\n"
    <p>1CO<sub>2</sub><sub>"\("g"\)"</sub> = 1"\("1*12 + 2*16 "\)" = 44 g/mol</p>"\n\n"
    <p>Cálculo da massa de Carbono:</p>"\n\n"
    <p>1C<sub>"\("s"\)"</sub> &#x2192; 1CO<sub>2</sub><sub>"\("g"\)"</sub></p>"\n\n"
    <p>12g &#x2192; 44g</p>"\n"
    <p>30g &#x2190;  Z</p>"\n\n"
    <p>12 x Z = "\("30 x 44"\)"</p>"\n"
    <p>Z = "\("30 x 44"\)" / 12</p>"\n"
    <p>Z = 110g</p>"\n"
    <p>massa real = 110g</p>"\n\n"
    <p>Rendimento:</p>"\n\n"
    <p>110g &#x2192; 100%</p>"\n"
    <p> Y &#x2190;  90%</p>"\n\n"
    <p>100 x Y = "\("90 x 110"\)"</p>"\n"
    <p>Y = "\("90 x 110"\)" / 100</p>"\n"
    <p>Y = 99g</p>"\n\n"
    <p>Para um rendimento de 90% foram produzidos somente 99g de Carbono</p>
    </string>
    <string name="TextViewExcessoTitulo">Excesso</string>
    <string name="imageExcessoLogo">imageExcessoLogos</string>
    <string name="TextViewExcessoInfoT">
    <p><b>Excesso</b></p>"\n\n"
    <p><b>Regras para calculo do excesso:</b></p>"\n\n"
    <p><b>1º Montar a equação química.</b></p>"\n\n"
    <p><b>2º Balancear a equação.</b></p>"\n\n"
    <p><b>3º Identificação dos índices estequiometricos.</b></p>"\n\n"
    <p><b>4º Calcular a massa molar multiplicando pelo índice de cada reagente</b></p>"\n\n"
    <p><b>5º O reagente limitante é aquele que estiver em menor quantidade.</b></p>"\n\n"
    <p><b>Atenção!:</b>O reagente limitante é aquele que é consumido primeiro na reação química.</p>"\n\n"
    <p><b>6º Calcula-se o excesso: m<sub>excesso</sub> = m<sub>amostra</sub> - m<sub>reagiu</sub></b></p>"\n\n"
    <p>Foram misturados 40g de gás hidrogênio "\("H<sub>2</sub>"\)" com 40g de gás oxigênio "\("O<sub>2</sub>"\)", com a finalidade de produzir água conforme a equação abaixo:</p>"\n\n"
    <p>H<sub>2</sub><sub>"\("g"\)"</sub> + O<sub>2</sub><sub>"\("g"\)"</sub> &#x2192; H<sub>2</sub>O<sub>"\("l"\)"</sub></p>"\n\n"
    <p>1H<sub>2</sub><sub>"\("g"\)"</sub> + 1/2O<sub>2</sub><sub>"\("g"\)"</sub> &#x2192; 1H<sub>2</sub>O<sub>"\("l"\)"</sub> x(2)</p>"\n\n"
    <p>2H<sub>2</sub><sub>"\("g"\)"</sub> + 1O<sub>2</sub><sub>"\("g"\)"</sub> &#x2192; 2H<sub>2</sub>O<sub>"\("l"\)"</sub></p>"\n\n"
    <p>Calcula-se a massa dos reagentes:</p>"\n\n"
    <p>Hidrogênio:</p>"\n\n"
    <p>2H<sub>2</sub> &#x2192; 2H<sub>2</sub>O</p>"\n\n"
    <p>2x"\("2x1"\)"g &#x2192; 2x"\("2x1 + 1x16"\)"g</p>"\n"
    <p>40g &#x2190; Y</p>"\n"
    <p>4 x Y = "\("40 x 36"\)"</p>"\n"
    <p>Y = "\("40 x 36"\)" / 4</p>"\n"
    <p>Y = 360g</p>"\n\n"
    <p>Oxigênio:</p>"\n\n"
    <p>1O<sub>2</sub> &#x2192; 2H<sub>2</sub>O</p>"\n\n"
    <p>1x"\("2x16"\)"g &#x2192; 2x"\("2x1 + 1x16"\)"g</p>"\n"
    <p>32g &#x2190; Z</p>"\n"
    <p>32 x Z = "\("40 x 36"\)"</p>"\n"
    <p>Z = "\("40 x 36"\)" / 32</p>"\n"
    <p>Z = 45g</p>"\n\n"
    <p>Neste exemplo o reagente limitante é o oxigênio</p>"\n\n"
    <p>Sabendo-se qual o reagente é o limitante, calcula-se o excesso:</p>"\n\n"
    <p><b>m<sub>excesso</sub> = m<sub>amostra</sub> - m<sub>reagiu</sub></b></p>"\n"
    <p><b>m<sub>amostra</sub> = 40g</b></p>"\n"
    <p><b>m<sub>reagiu</sub> = ?</b></p>"\n\n"
    <p>2H<sub>2</sub> &#x2192; O<sub>2</sub></p>"\n"
    <p>2x"\("2x1"\)" &#x2192; 1x"\("2x16"\)"</p>"\n"
    <p>W &#x2190; 40g</p>"\n"
    <p>32 x W = "\("40 x 4"\)"</p>"\n"
    <p>W = "\("40 x 4"\)" / 32</p>"\n"
    <p>W = 5g de Hidrogênio</p>"\n\n"
    <p>m<sub>reagiu</sub> = W</p>"\n"
    <p>m<sub>reagiu</sub> = 5g</p>"\n\n"
    <p><b>m<sub>excesso</sub> = m<sub>amostra</sub> - m<sub>reagiu</sub></b></p>"\n"
    <p><b>m<sub>excesso</sub> = "\("40 - 5"\)"</b></p>"\n"
    <p><b>m<sub>excesso</sub> = 35g de Hidrogênio</b></p>
    </string>
    <string name="imageLimitanteLogo">imageLimitante</string>
    <string name="TextViewLimitante">Limitante</string>
    <string name="TextViewConcentracaoMolarTC">Concentração Molar</string>
    <string name="NameMassaConcentracaoMolar">Massa [g]</string>
    <string name="NameVolumeConcentracaoMolarTc">Volume [ml]</string>
    <string name="NameMassaMolarConcentracaoMolarTc">Massa Molar [g/mol]</string>
    <string name="TextViewConcentracaoMolarTcR">Concentração Molar [mol/l]</string>
    <string name="ButtonCalcularConcentracaoMolar">Calcular</string>
    <string name="ButtonLimparConcentracaoMolar">Limpar</string>
    <string name="TextViewNumeroDeMols">Número de Mols</string>
    <string name="NameNumeroDeMolsMassa">Massa [g]</string>
    <string name="NameNumeroDeMolsMassaMolar">Massa Molar [g/mol]</string>
    <string name="TextViewNumeroDeMolsRes">Número de Mols [mols]</string>
    <string name="ButtonCalNMols">Calcular</string>
    <string name="ButtonLimparNM">Limpar</string>
    <string name="TextViewDicasProfessores">Padronização do HCl</string>
    <string name="NameConcentracaoMolarPadraoAcido">Concentração Molar [mol/l]</string>
    <string name="NameMassaMolarPadraoAcido">Massa Molar [g/mol]</string>
    <string name="NameVolumePadraoAcido">Volume [ml]</string>
    <string name="NameMassaPadraoAcido">Massa solução [g]</string>
    <string name="ButtonCalcularMassaPadrao">Calcular</string>
    <string name="NameTituloPadraoAcido">Título [%]</string>
    <string name="NameMassaReal">Massa real [g]</string>
    <string name="NameDensidadeAcidoPadrao">Densidade [g/cm³]</string>
    <string name="NameVolumeReal">Volume Real [ml]</string>
    <string name="ButtonLimparPadronizacao">Limpar</string>
</resources>